Fix broken CSS, add comments to further explain what is updated, and add Eric Meyer CSS reset cdn link

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
-body
+body { /*add { next to body*/
   font-size: 14px;
 }
 
 nav {
-  background color: yellow;
+  background-color: yellow; /*change background color to background-color*/
   height: 100px;
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+} /*add { here*/
 
 section {
   margin: 0 auto;
@@ -16,13 +16,13 @@ section {
 }
 
 h1 {
-  font-family sans-serif;
+  font-family: sans-serif; /*change font family to font-family*/
   font-size: 2em;
 }
 
-.example, h3 {
+.example h3 { /*remove comma inbetween example and h3*/
   padding-top: 30px;
-  text-align center
+  text-align: center; /*change text align to text-align and add ; after center*/
 }
 
 h3 {
@@ -32,5 +32,13 @@ h3 {
 .element {
   background-color: green;
   height: 100px;
-  margin 10px 0;
+  margin: 10px 0; /* : after margin*/
   width: 100%;
+} /*add { here*/
+
+.element1 {
+  background-color: grey;
+  height: 100px;
+  margin: 10px 0;
+  width: 100%;
+}
